--- a/ll2dot.1
+++ b/ll2dot.1
@@ -8,8 +8,8 @@ block.
 For a source file "foo.ll" containing the functions "bar" and "baz" the
 following DOT files will be created:
 
-   foo_graphs/bar.dot
-   foo_graphs/baz.dot
+   * "foo_graphs/bar.dot"
+   * "foo_graphs/baz.dot"
 .SH "SYNOPSIS"
 ll2dot
 .I "[option...]"
