--- a/ll2dot.1
+++ b/ll2dot.1
@@ -1,7 +1,7 @@
 .TH "LL2DOT" 1 "2015-03-04" "Ll2dot" "Ll2dot Manual"
 .SH "NAME"
 ll2dot is a tool which generates control flow graphs from LLVM IR assembly files
-(e.g. *.ll -> *.dot). The output is a set of GraphViz DOT files, each
+(e.g. *.ll -> *.dot). The output is a set of Graphviz DOT files, each
 representing the control flow graph of a function using one node per basic
 block.
 
